tests/snapshots/compiler__if_statement_boolean.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        JumpIfFalse {
            src: 1,
            offset: 5,
        },
        LoadLiteral {
            dest: 2,
            src: 1,
        },
        Copy {
            dest: 3,
            src: 2,
        },
        LoadLiteral {
            dest: 4,
            src: 2,
        },
        CallNativeFunction {
            src: 4,
            arg_count: 1,
            return_val: 5,
        },
        Jump {
            offset: 11,
        },
        LoadLiteral {
            dest: 6,
            src: 0,
        },
        JumpIfFalse {
            src: 6,
            offset: 5,
        },
        LoadLiteral {
            dest: 7,
            src: 3,
        },
        Copy {
            dest: 8,
            src: 7,
        },
        LoadLiteral {
            dest: 9,
            src: 2,
        },
        CallNativeFunction {
            src: 9,
            arg_count: 1,
            return_val: 10,
        },
        Jump {
            offset: 4,
        },
        LoadLiteral {
            dest: 11,
            src: 4,
        },
        Copy {
            dest: 12,
            src: 11,
        },
        LoadLiteral {
            dest: 13,
            src: 2,
        },
        CallNativeFunction {
            src: 13,
            arg_count: 1,
            return_val: 14,
        },
    ],
    global_register_count: 15,
    literals: [
        Boolean(
            false,
        ),
        String(
            "boolean constant if",
        ),
        String(
            "print",
        ),
        String(
            "boolean constant else",
        ),
        String(
            "final else",
        ),
    ],
}
