tests/snapshots/compiler__nested_loop.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        LoadLiteral {
            dest: 2,
            src: 0,
        },
        LoadLiteral {
            dest: 3,
            src: 1,
        },
        GreaterThan {
            dest: 4,
            lhs: 2,
            rhs: 3,
        },
        JumpIfFalse {
            src: 4,
            offset: 6,
        },
        LoadLiteral {
            dest: 5,
            src: 2,
        },
        Copy {
            dest: 6,
            src: 5,
        },
        LoadLiteral {
            dest: 7,
            src: 3,
        },
        CallNativeFunction {
            src: 7,
            arg_count: 1,
            return_val: 8,
        },
        Jump {
            offset: 8,
        },
        LoadLiteral {
            dest: 9,
            src: 4,
        },
        Add {
            dest: 10,
            lhs: 2,
            rhs: 9,
        },
        Copy {
            dest: 2,
            src: 10,
        },
        Copy {
            dest: 11,
            src: 2,
        },
        LoadLiteral {
            dest: 12,
            src: 3,
        },
        CallNativeFunction {
            src: 12,
            arg_count: 1,
            return_val: 13,
        },
        JumpReverse {
            offset: 14,
        },
        LoadLiteral {
            dest: 14,
            src: 1,
        },
        GreaterThan {
            dest: 15,
            lhs: 1,
            rhs: 14,
        },
        JumpIfFalse {
            src: 15,
            offset: 6,
        },
        LoadLiteral {
            dest: 16,
            src: 2,
        },
        Copy {
            dest: 17,
            src: 16,
        },
        LoadLiteral {
            dest: 18,
            src: 3,
        },
        CallNativeFunction {
            src: 18,
            arg_count: 1,
            return_val: 19,
        },
        Jump {
            offset: 9,
        },
        LoadLiteral {
            dest: 20,
            src: 4,
        },
        Add {
            dest: 21,
            lhs: 1,
            rhs: 20,
        },
        Copy {
            dest: 1,
            src: 21,
        },
        Copy {
            dest: 22,
            src: 1,
        },
        LoadLiteral {
            dest: 23,
            src: 3,
        },
        CallNativeFunction {
            src: 23,
            arg_count: 1,
            return_val: 24,
        },
        JumpReverse {
            offset: 30,
        },
    ],
    global_register_count: 25,
    literals: [
        Integer(
            0,
        ),
        Integer(
            3,
        ),
        String(
            "exit loop",
        ),
        String(
            "print",
        ),
        Integer(
            1,
        ),
    ],
}
