tests/snapshots/compiler__small_input.snap
---
source: tests/compiler.rs
expression: output
---
CompiledProgram {
    functions: [
        Function {
            name: "print",
            code: [
                FunctionReturn,
            ],
            register_count: 1,
        },
        Function {
            name: "test",
            code: [
                LoadLiteral {
                    dest: 2,
                    src: 2,
                },
                Add {
                    dest: 3,
                    lhs: 2,
                    rhs: 1,
                },
                LoadLiteral {
                    dest: 4,
                    src: 0,
                },
                Add {
                    dest: 5,
                    lhs: 3,
                    rhs: 4,
                },
                LoadLiteral {
                    dest: 6,
                    src: 3,
                },
                Add {
                    dest: 7,
                    lhs: 3,
                    rhs: 6,
                },
                FunctionReturn,
            ],
            register_count: 8,
        },
        Function {
            name: "main",
            code: [
                LoadLiteral {
                    dest: 1,
                    src: 2,
                },
                LoadLiteral {
                    dest: 2,
                    src: 0,
                },
                Add {
                    dest: 3,
                    lhs: 1,
                    rhs: 2,
                },
                LoadLiteral {
                    dest: 4,
                    src: 4,
                },
                Copy {
                    dest: 5,
                    src: 4,
                },
                LoadFunction {
                    dest: 6,
                    src: 0,
                },
                CallFunction {
                    src: 6,
                    arg_count: 1,
                    return_val: 7,
                },
                Copy {
                    dest: 8,
                    src: 3,
                },
                LoadFunction {
                    dest: 9,
                    src: 0,
                },
                CallFunction {
                    src: 9,
                    arg_count: 1,
                    return_val: 10,
                },
                LoadLiteral {
                    dest: 11,
                    src: 1,
                },
                Copy {
                    dest: 12,
                    src: 11,
                },
                LoadFunction {
                    dest: 13,
                    src: 1,
                },
                CallFunction {
                    src: 13,
                    arg_count: 1,
                    return_val: 14,
                },
                Copy {
                    dest: 15,
                    src: 3,
                },
                LoadFunction {
                    dest: 16,
                    src: 0,
                },
                CallFunction {
                    src: 16,
                    arg_count: 1,
                    return_val: 17,
                },
                FunctionReturn,
            ],
            register_count: 18,
        },
    ],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        LoadLiteral {
            dest: 2,
            src: 1,
        },
        Add {
            dest: 3,
            lhs: 1,
            rhs: 2,
        },
        LoadFunction {
            dest: 4,
            src: 2,
        },
        CallFunction {
            src: 4,
            arg_count: 0,
            return_val: 5,
        },
    ],
    global_register_count: 6,
    literals: [
        Integer(
            3,
        ),
        Integer(
            4,
        ),
        Float(
            1.3,
        ),
        Integer(
            2,
        ),
        String(
            "Hello",
        ),
    ],
}
